# multi_module_bazels

./: .gitignore  BUILD  MODULE.bazel  Makefile  README.md  WORKSPACE  go.work
cmd/: .bazelrc  BUILD  MODULE.bazel  cmd  cmd.go  deps.bzl  go.mod
lib_a/: BUILD  MODULE.bazel  go.mod  lib_a.go
lib_b/: BUILD  MODULE.bazel  deps.bzl  go.mod
pkg/lib_a/: .bazelrc  BUILD  go.mod
pkg/lib_b/: BUILD  go.mod
