module(
    name = "multi_module_bazels",
    version = "0.0.1",
)

bazel_dep(name = "gazelle", version = "0.34.0")
bazel_dep(name = "rules_go", version = "0.43.0")

# Configure common Go settings for all modules/submodules:
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

# Download a specific version of the SDK:
go_sdk.download(version = "1.21.3")

# Register the Go SDK installed on the host.
go_sdk.host()

# Depend on module lib_a at a local path.
# The bazel_dep statement is necessary because the root module must have visibility on lib_a.
bazel_dep(name = "lib_a", version = "")
local_path_override(
    module_name = "lib_a",
    path = "./lib_a",
)