module(
    name = "multimod",
    version = "0.0.1",
)

bazel_dep(name = "gazelle", version = "0.34.0")
bazel_dep(name = "rules_go", version = "0.43.0")

bazel_dep(name = "lib_a", version = "0.0.1")
local_path_override(
    module_name = "lib_a",
    path = "./pkg/lib_a",
)

bazel_dep(name = "lib_b", version = "0.0.1")
local_path_override(
    module_name = "lib_b",
    path = "./pkg/lib_b",
)

bazel_dep(name = "cmd", version = "0.0.1")
local_path_override(
    module_name = "cmd",
    path = "./cmd",
)