module(
    name = "cmd",
    version = "0.0.1",
)

bazel_dep(name = "gazelle", version = "0.34.0")
bazel_dep(name = "rules_go", version = "0.43.0")

# Configure common Go settings for all modules/submodules:
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

# Download a specific version of the SDK:
go_sdk.download(version = "1.21.3")

# Register the Go SDK installed on the host.
#go_sdk.host()

# Register the go.mod file with the go_deps extension.
# The go_deps extension parses this file directly, so external tooling such as gazelle update-repos is no longer needed.
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# All *direct* Go dependencies of the module have to be listed explicitly.
use_repo(
    go_deps,
    "com_github_dustin_go_humanize",
)
